[project]
name = "github-profile"
version = "0.1.0"
description = "Script to automatically generate a chart for my GitHub profile readme"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygal>=3.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "time-machine>=3.2.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.3"]
